--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="GlideImageView">
-        <attr name="loadUrl" format="string"/>
-        <attr name="scaleType" >
+        <attr name="transcodeType">
+            <enum name="asDrawable" value="0" />
+            <enum name="asBitmap" value="1" />
+            <enum name="asGif" value="2" />
+        </attr>
+        <attr name="scaleType">
             <enum name="matrix" value="0" />
             <enum name="fitXY" value="1" />
             <enum name="fitStart" value="2" />
@@ -11,6 +15,15 @@
             <enum name="center" value="5" />
             <enum name="centerCrop" value="6" />
             <enum name="centerInside" value="7" />
+            <enum name="circleCrop" value="8" />
         </attr>
+        <attr name="placeholder" format="reference" />
+        <attr name="error" format="reference" />
+        <attr name="loadUrl" format="string" />
+        <attr name="roundedCorners" format="dimension" />
+        <attr name="topLeftRadius" format="dimension" />
+        <attr name="topRightRadius" format="dimension" />
+        <attr name="bottomLeftRadius" format="dimension" />
+        <attr name="bottomRightRadius" format="dimension" />
     </declare-styleable>
 </resources>
