--- a/app/src/main/res/layout/multi_function_layout.xml
+++ b/app/src/main/res/layout/multi_function_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
     
     <CheckBox
         android:id="@+id/checkbox"
@@ -29,7 +30,7 @@
         app:layout_constraintStart_toEndOf="@+id/checkbox"
         app:layout_constraintEnd_toStartOf="@+id/msgLayout"
         tools:src="@mipmap/ic_launcher"
-        tools:visibility="visible"
+        tools:visibility="gone"
         />
 
     <LinearLayout
@@ -40,8 +41,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/leftImage"
-        app:layout_constraintEnd_toStartOf="@+id/rightImage"
-        >
+        app:layout_constraintEnd_toStartOf="@+id/rightImage">
 
         <TextView
             android:id="@+id/title"
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toEndOf="@+id/msgLayout"
         app:layout_constraintEnd_toEndOf="parent"
         tools:src="@mipmap/ic_launcher"
-        tools:visibility="visible"
+        tools:visibility="gone"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</merge>
