--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@color/white">
-
-    <cn.goodjobs.client.widgets.GlideImageView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintDimensionRatio="H,16:9"
-        android:scaleType="centerInside"
-        app:loadUrl="https://www.2008php.com/09_Website_appreciate/10-07-11/1278861720_g.jpg"
-        app:placeholder="@mipmap/ic_launcher"
-        app:error="@mipmap/ic_launcher"
-        app:roundedCorners="8dp"
-        >
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:padding="16dp">
 
-    </cn.goodjobs.client.widgets.GlideImageView>
+        <com.wpf.app.base.widgets.GlideImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scaleType="centerInside"
+            app:error="@mipmap/ic_launcher"
+            app:layout_constraintDimensionRatio="H,16:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:loadUrl="https://www.2008php.com/09_Website_appreciate/10-07-11/1278861720_g.jpg"
+            app:placeholder="@mipmap/ic_launcher"
+            app:roundedCorners="8dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </com.wpf.app.base.widgets.GlideImageView>
 
-    <!--</layout>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
