--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@color/white">
+    <data>
 
-    <cn.goodjobs.client.widgets.GlideImageView
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="cn.goodjobs.client.viewmodel.MainViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="H,16:9"
-        android:scaleType="centerInside"
-        app:loadUrl="https://www.2008php.com/09_Website_appreciate/10-07-11/1278861720_g.jpg"
-        app:placeholder="@mipmap/ic_launcher"
-        app:error="@mipmap/ic_launcher"
-        app:roundedCorners="8dp"
-        />
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:padding="16dp">
 
-    <cn.goodjobs.client.widgets.MultiFunctionView
-        android:id="@+id/msgLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:showCheckBox="true"
-        app:title="标题"
-        app:titleColor="@color/black"
-        app:titleSize="22sp"
-        app:subTitle="副标题"
-        app:subTitleSize="16sp"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.wpf.app.base.widgets.GlideImageView
+            android:id="@+id/glideView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scaleType="centerInside"
+            android:visibility="@{viewModel.showGlide ? View.VISIBLE : View.GONE}"
+            app:error="@mipmap/ic_launcher"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="H,16:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:loadUrl="https://www.2008php.com/09_Website_appreciate/10-07-11/1278861720_g.jpg"
+            app:placeholder="@mipmap/ic_launcher"
+            app:roundedCorners="8dp" />
 
-    <!--</layout>-->
+        <com.wpf.app.base.widgets.MultiFunctionView
+            android:id="@+id/msgLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:showCheckBox="true"
+            app:subTitle="副标题"
+            app:subTitleSize="16sp"
+            app:title="标题"
+            app:titleColor="@color/black"
+            app:titleSize="22sp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
