--- a/app/src/main/res/layout/holder_test3.xml
+++ b/app/src/main/res/layout/holder_test3.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="data"
-            type="cn.goodjobs.client.model.TestModel3" />
+            type="com.wpf.app.quick.model.TestModel3" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
