--- a/app/src/main/res/layout/holder_test2.xml
+++ b/app/src/main/res/layout/holder_test2.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="adapter"
-            type="com.wpf.app.quick.base.widgets.recyclerview.CommonAdapter" />
+            type="com.wpf.app.quick.base.widgets.recyclerview.QuickAdapter" />
 
         <variable
             name="position"
