--- a/app/src/main/res/layout/activity_data_test.xml
+++ b/app/src/main/res/layout/activity_data_test.xml
@@ -2,35 +2,27 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-        <import type="android.view.View" />
-
-        <variable
-            name="viewModel"
-            type="com.wpf.app.quick.viewmodel.MainViewModel" />
-    </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:orientation="vertical"
+        android:gravity="center"
         android:padding="16dp">
 
-        <Button
+        <TextView
+            android:id="@+id/title"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="列表测试"
-            android:onClick="gotoList"
             />
 
-        <Button
+        <TextView
+            android:id="@+id/title1"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="数据测试"
-            android:onClick="gotoData"
             />
+
     </LinearLayout>
 
 </layout>
