日常提交:2022-08-23. 添加支持在xml中使用。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,10 @@
             android:onClick="gotoSelectList"
             />
 
+        <com.wpf.app.quick.demo.model.SelectItemView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:id="@+id/testBindSpLL"
             android:layout_width="match_parent"
