--- a/Quick/src/main/res/values/attrs.xml
+++ b/Quick/src/main/res/values/attrs.xml
@@ -115,4 +115,8 @@
         <attr name="layout" format="reference"/>
     </declare-styleable>
 
+    <declare-styleable name="AspectRatioView">
+        <attr name="ratio" format="float"/>
+    </declare-styleable>
+
 </resources>
