--- a/Quick/src/main/res/values/styles.xml
+++ b/Quick/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CircleImageStyle">
+    <style name="CircleImageStyle" parent="" >
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
